feat: ログ機能を追加

--- a/index.html
+++ b/index.html
@@ -271,6 +271,19 @@
 
     <!-- 銀河マップコンテナ -->
     <div id="galaxy-map-container"></div>
+
+    <!-- 時系列ログパネル -->
+    <div id="timeline-log-container">
+      <div id="timeline-log-toggle">
+        <span id="timeline-log-toggle-text">ログ</span>
+        <span id="timeline-log-toggle-icon">▲</span>
+      </div>
+      <div id="timeline-log-panel">
+        <div id="timeline-log-content">
+          <div id="timeline-log-entries"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="/main.js"></script>
