--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </div>
   </div>
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
         const iconMap = {
