fix: 軽微な修正

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -404,6 +404,21 @@
         </div>
       </div>
       
+      <!-- リソース変動リアルタイム表示 -->
+      <div class="collapsible-section">
+        <div class="collapsible-header active" id="resourceFlowHeader">⚡ リソース変動リアルタイム</div>
+        <div class="collapsible-content active" id="resourceFlowContent">
+          <div id="resource-flow-display">
+            <div class="flow-info">
+              <p>💡 変換中のリソースの流れをリアルタイムで表示します</p>
+            </div>
+            <div id="active-flows-container">
+              <!-- 動的に変換中のリソース変動を表示 -->
+            </div>
+          </div>
+        </div>
+      </div>
+      
       <!-- 変換レシピ -->
       <div class="collapsible-section">
         <div class="collapsible-header active" id="conversionRecipesHeader">変換レシピ</div>
