feat: Resolution Debugパネルの表示非表示ボタンの追加

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -526,6 +526,7 @@
                       <button id="addDarkMatterButton">DMを10追加</button>
                       -->
                       <button id="resetGameButton">ゲームをリセット</button>
+                      <button id="toggleResolutionDebug">Resolution Debug: <span id="resolutionDebugStatus">オフ</span></button>
                   </div>
               </div>
           </div>
