feat: モバイル解像度スケールの警告メッセージを追加 - 解像度スケール選択時に警告メッセージを表示する機能を実装 - CSSスタイルを追加し、警告メッセージの見た目を改善 - 初期値の警告メッセージを設定する機能を追加

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -348,12 +348,16 @@
           <div class="mobile-setting-item">
             <label class="setting-label">解像度スケール:</label>
             <select id="mobile-resolutionScaleSelect" class="mobile-select">
+              <option value="25">25% (超軽い)</option>
               <option value="50">50% (軽い)</option>
               <option value="75">75% (標準)</option>
               <option value="100" selected>100% (高品質)</option>
               <option value="125">125% (超高品質)</option>
               <option value="150">150% (最高品質)</option>
             </select>
+            <div id="mobile-resolution-hint" class="mobile-setting-hint">
+              💡 解像度スケールを選択してください
+            </div>
           </div>
           
           <!-- パーティクル密度 -->
