feat: 銀河マップトグルボタンの追加とUI改善 - 銀河マップの開閉を制御するトグルボタンを実装 - ボタンのスタイルを追加し、モバイルデバイス向けに最適化 - 銀河マップの表示状態に応じてボタンのテキストとタイトルを更新 - UIのタブ切り替えに応じてボタンの表示を制御

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -1129,6 +1129,7 @@
     </div>
 
     <!-- 銀河マップコンテナ -->
+    <button id="galaxy-map-toggle" title="レーダーを開閉">📡</button>
     <div id="galaxy-map-container"></div>
 
     <!-- 統計・ログパネル -->
