fix: モバイルUIの改善とデバイス検出の初期化
モバイルタブボタンを追加し、各タブに対するイベントリスナーを設定しました。また、デバイス検出機能を初期化するコードを追加し、UIの更新に必要な要素を整理しました。これにより、モバイルデバイスでの操作性が向上しました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -1365,7 +1365,7 @@
             console.log('🔧 Attempting direct module imports...');
             
             // Load currency system
-            import('/js/currencySystem.ts')
+            import('./js/currencySystem.ts')
                 .then((currencyModule) => {
                     console.log('🔧 currencySystem module loaded:', currencyModule);
                     if (currencyModule.currencyManager) {
@@ -1379,7 +1379,7 @@
                 });
             
             // Load market system
-            import('/js/marketSystem.ts')
+            import('./js/marketSystem.ts')
                 .then((marketModule) => {
                     console.log('🔧 marketSystem module loaded:', marketModule);
                     if (marketModule.marketSystem) {
