feat: リソース生成とUIの改善 - リソース生成の速度を向上させ、ゲーム進行の滑らかさを改善しました。 - UIにリソース生産速度を表示する機能を追加し、モバイルデバイス向けの表示を最適化しました。 - 統計情報の表示を更新し、ユーザー体験を向上させました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -973,10 +973,6 @@
       <div id="game-screen">
         <div id="ui-panel">
           <h1>Cosmic Gardener</h1>
-          <div id="compact-info-message">
-            <p>リソース情報は右上の ℹ️ ボタンで確認できます</p>
-            <p>天体の数: <span id="starCount">0</span></p>
-          </div>
 
 
           <div class="collapsible-section">
@@ -1443,7 +1439,7 @@
 
     <!-- 右下の統計情報 -->
     <div id="game-stats-overlay">
-        <p>塵: <span id="overlayCosmicDust">0</span></p>
+        <p>塵: <span id="overlayCosmicDust">0</span> <span class="resource-rate">(+<span id="overlayDustRate">0</span>/s)</span></p>
         <p>エネルギー: <span id="overlayEnergy">0</span></p>
         <p>天体: <span id="overlayStarCount">0</span></p>
         <p>TP: <span id="overlayThoughtPoints">0</span></p>
