feat: 自動化システムの実装とUI統合 - 自動化に関連する新しい研究項目を追加し、研究データを更新しました。 - 自動化システムの初期化処理をmain.tsに追加し、メニューシステムに自動化オプションを統合しました。 - 生産分析機能を追加し、ユーザーが生産効率を分析できるようにしました。 - UIの改善により、直感的な操作が可能になりました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -1761,6 +1761,7 @@
           <button class="research-category-tab" data-category="life">生命研究</button>
           <button class="research-category-tab" data-category="technology">技術研究</button>
           <button class="research-category-tab" data-category="cosmic">宇宙研究</button>
+          <button class="research-category-tab" data-category="automation">自動化</button>
         </div>
 
         <!-- 研究項目表示エリア -->
