feat: サウンド設定の初期化と物理エンジンの速度管理の改善 - サウンド設定セクションを非表示に設定し、ユーザーインターフェースの初期化を行いました。 - 物理エンジンにおいて、速度がVector3でない場合の変換処理を追加しました。 - メニューシステムにオプション画面の初期化を統合しました。 - CSSにオプション画面のスタイルを追加しました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -399,7 +399,7 @@
         </div>
         
         <!-- サウンド設定セクション -->
-        <div class="mobile-section">
+        <div class="mobile-section" style="display: none;">
           <h4 class="mobile-section-title">🔊 サウンド設定</h4>
           
           <!-- マスター音量 -->
@@ -1510,7 +1510,7 @@
               </div>
 
 
-              <div class="collapsible-section">
+              <div class="collapsible-section" style="display: none;">
                 <div class="collapsible-header" id="soundHeader">🔊 サウンド設定</div>
                 <div class="collapsible-content hidden" id="soundContent">
                     <div class="option-item">
